Fixed vertical alignment in Windowed mode

--- a/src/overlay.css
+++ b/src/overlay.css
@@ -346,7 +346,9 @@ input[type="file"] {
 /* Containers for "sections" of elements in windowed mode */
 /* Does not apply to the main window */
 .bm-container:not(#bm-window-main .bm-container) {
-  margin: 0.25em 0;
+  margin-top: 0.25em;
+  margin-bottom: 0.25em;
+  /* Do not use 'margin' shorthand, as it will override left/right margin */
 }
 
 /* Header 1 in windowed mode */
